--- a/index.html
+++ b/index.html
@@ -17,18 +17,16 @@
   <!-- SIGN UP MODAL -->
 <div id="signupModal" class="modal-overlay" style="display: none;">
 	<div class="signup-modal">
-	  <h2>SIGN UP</h2>
+	  <h2 id="signUpHeader">SIGN UP</h2>
 	  <form>
-		<input type="text" placeholder="First Name" required />
-		<input type="text" placeholder="Last Name" required />
-		<input type="text" placeholder="Username" required />
-		<input type="password" placeholder="Password" required />
-		<button type="submit" class="submit-btn">SUBMIT</button>
+			<input type="text" id="FirstName" placeholder="First Name" />
+			<input type="text" id="LastName" placeholder="Last Name" />
+			<input type="text" id="loginName" placeholder="Username" />
+			<input type="password" id="passwordName" placeholder="Password"/><br />
+			<button type="submit" id="signUpButton" class="submit-btn">SUBMIT</button>
 	  </form>
 	</div>
   </div>
-
-
 
   <body>
     <div class="HOME-PAGE">
