Renamed styling and about code for merge

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/globals.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/about.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Nixie+One&family=Send+Flowers&display=swap" rel="stylesheet" />
   </head>
 
@@ -12,7 +12,7 @@
     <div class="HOME-PAGE">
       <div class="div">
         <div class="aqua-link">
-          <div class="logo-ellipse"></div>
+          <!-- <div class="logo-ellipse"></div> -->
           <p class="logo-text">
             <span class="text-wrapper">Aqua</span>
             <span class="span">Link</span>
@@ -48,7 +48,7 @@
             <p class="member-role">Database</p>
 
         </div>
-        
+
         <div class="member">
           <div class="ellipse">
             <img src="images/Self_Portraits/jeremesp.jpg" alt="Jereme">
